fix case studies page on mobile

--- a/assets/scss/case_studies.scss
+++ b/assets/scss/case_studies.scss
@@ -312,7 +312,7 @@ body.td-section.cid-casestudies {
         }
 
         .case-study-video {
-            flex-basis: 90%;
+            flex-basis: 100%;
             iframe {
                 margin-right: auto;
             }
